_versions/3.2/guides/jms.adoc
////
This guide is maintained in the main Quarkus repository
and pull requests should be submitted there:
https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
////
= Using JMS
include::_attributes.adoc[]
:categories: messaging
:summary: This guide demonstrates how your Quarkus application can use JMS messaging with AMQP 1.0 using Apache Qpid JMS, or using Apache ActiveMQ Artemis JMS.
:extension-status: preview


This guide demonstrates how your Quarkus application can use JMS messaging via the
Apache Qpid JMS AMQP client, or alternatively the Apache ActiveMQ Artemis JMS client.

include::{includes}/extension-status.adoc[]

== Prerequisites

include::{includes}/prerequisites.adoc[]
* A running Artemis server, or Docker to start one

== Architecture

In this guide, we are going to generate (random) prices in one component.
These prices are written to a queue (`prices`) using a JMS client.
Another component reads from the `prices` queue and stores the latest price.
The data can be fetched from a browser using a fetch button from a Jakarta REST resource.


The guide can be used either via the Apache Qpid JMS AMQP client as detailed immediately below, or
alternatively with the Apache ActiveMQ Artemis JMS client given some different configuration
as xref:artemis-jms[detailed later].

[#qpid-jms-amqp]
== Qpid JMS - AMQP

In the detailed steps below we will use the https://qpid.apache.org/components/jms/[Apache Qpid JMS]
client via the https://github.com/amqphub/quarkus-qpid-jms/[Quarkus Qpid JMS extension]. Qpid JMS
uses the AMQP 1.0 ISO standard as its wire protocol, allowing it to be used with a variety of
AMQP 1.0 servers and services such as ActiveMQ Artemis, ActiveMQ 5, Qpid Broker-J, Qpid Dispatch router,
Azure Service Bus, and more.

=== Solution

We recommend that you follow the instructions in the next sections and create the application step by step.
However, you can go right to the completed example.

Clone the Git repository: `git clone https://github.com/amqphub/quarkus-qpid-jms-quickstart.git`,
or download an https://github.com/amqphub/quarkus-qpid-jms-quickstart/archive/main.zip[archive].

=== Creating the Maven Project

First, we need a new project. Create a new project with the following command:

:create-app-artifact-id: jms-quickstart
:create-app-extensions: resteasy-reactive,qpid-jms
include::{includes}/devtools/create-app.adoc[]

This command generates a new project importing the quarkus-qpid-jms extension:

[source,xml,role="primary asciidoc-tabs-target-sync-cli asciidoc-tabs-target-sync-maven"]
.pom.xml
----
<dependency>
    <groupId>org.amqphub.quarkus</groupId>
    <artifactId>quarkus-qpid-jms</artifactId>
</dependency>
----

[source,gradle,role="secondary asciidoc-tabs-target-sync-gradle"]
.build.gradle
----
implementation("org.amqphub.quarkus:quarkus-qpid-jms")
----

[#starting-the-broker]
=== Starting the broker

Then, we need an AMQP broker. In this case we will use an Apache ActiveMQ Artemis server.
You can follow the instructions from the https://activemq.apache.org/components/artemis/[Apache Artemis website] or start a broker via docker using the https://artemiscloud.io/[ArtemisCloud] container image:

[source,bash]
----
docker run -it --rm -p 8161:8161 -p 61616:61616 -p 5672:5672 -e AMQ_USER=quarkus -e AMQ_PASSWORD=quarkus quay.io/artemiscloud/activemq-artemis-broker:0.1.4
----

=== The price producer

Create the `src/main/java/org/acme/jms/PriceProducer.java` file, with the following content:

[source, java]
----
package org.acme.jms;

import java.util.Random;
import java.util.concurrent.Executors;
import java.util.concurrent.ScheduledExecutorService;
import java.util.concurrent.TimeUnit;

import jakarta.enterprise.context.ApplicationScoped;
import jakarta.enterprise.event.Observes;
import jakarta.inject.Inject;
import jakarta.jms.ConnectionFactory;
import jakarta.jms.JMSContext;

import io.quarkus.runtime.ShutdownEvent;
import io.quarkus.runtime.StartupEvent;

/**
 * A bean producing random prices every 5 seconds and sending them to the prices JMS queue.
 */
@ApplicationScoped
public class PriceProducer implements Runnable {

    @Inject
    ConnectionFactory connectionFactory;

    private final Random random = new Random();
    private final ScheduledExecutorService scheduler = Executors.newSingleThreadScheduledExecutor();

    void onStart(@Observes StartupEvent ev) {
        scheduler.scheduleWithFixedDelay(this, 0L, 5L, TimeUnit.SECONDS);
    }

    void onStop(@Observes ShutdownEvent ev) {
        scheduler.shutdown();
    }

    @Override
    public void run() {
        try (JMSContext context = connectionFactory.createContext(JMSContext.AUTO_ACKNOWLEDGE)) {
            context.createProducer().send(context.createQueue("prices"), Integer.toString(random.nextInt(100)));
        }
    }
}
----

=== The price consumer

The price consumer reads the prices from JMS, and stores the last one.
Create the `src/main/java/org/acme/jms/PriceConsumer.java` file with the following content:

[source, java]
----
package org.acme.jms;

import java.util.concurrent.ExecutorService;
import java.util.concurrent.Executors;

import jakarta.enterprise.context.ApplicationScoped;
import jakarta.enterprise.event.Observes;
import jakarta.inject.Inject;
import jakarta.jms.ConnectionFactory;
import jakarta.jms.JMSConsumer;
import jakarta.jms.JMSContext;
import jakarta.jms.JMSException;
import jakarta.jms.Message;

import io.quarkus.runtime.ShutdownEvent;
import io.quarkus.runtime.StartupEvent;

/**
 * A bean consuming prices from the JMS queue.
 */
@ApplicationScoped
public class PriceConsumer implements Runnable {

    @Inject
    ConnectionFactory connectionFactory;

    private final ExecutorService scheduler = Executors.newSingleThreadExecutor();

    private volatile String lastPrice;

    public String getLastPrice() {
        return lastPrice;
    }

    void onStart(@Observes StartupEvent ev) {
        scheduler.submit(this);
    }

    void onStop(@Observes ShutdownEvent ev) {
        scheduler.shutdown();
    }

    @Override
    public void run() {
        try (JMSContext context = connectionFactory.createContext(JMSContext.AUTO_ACKNOWLEDGE)) {
            JMSConsumer consumer = context.createConsumer(context.createQueue("prices"));
            while (true) {
                Message message = consumer.receive();
                if (message == null) return;
                lastPrice = message.getBody(String.class);
            }
        } catch (JMSException e) {
            throw new RuntimeException(e);
        }
    }
}
----

=== The price resource

Finally, let's create a simple Jakarta REST resource to show the last price.
Create the `src/main/java/org/acme/jms/PriceResource.java` file with the following content:

[source, java]
----
package org.acme.jms;

import jakarta.inject.Inject;
import jakarta.ws.rs.GET;
import jakarta.ws.rs.Path;
import jakarta.ws.rs.Produces;
import jakarta.ws.rs.core.MediaType;

/**
 * A simple resource showing the last price.
 */
@Path("/prices")
public class PriceResource {

    @Inject
    PriceConsumer consumer;

    @GET
    @Path("last")
    @Produces(MediaType.TEXT_PLAIN)
    public String last() {
        return consumer.getLastPrice();
    }
}
----

=== The HTML page

Final touch, the HTML page reading the converted prices using SSE.

Create the `src/main/resources/META-INF/resources/prices.html` file, with the following content:

[source, html]
----
<!DOCTYPE html>
<html lang="en">
<head>
    <meta charset="UTF-8">
    <title>Prices</title>

    <link rel="stylesheet" type="text/css"
          href="https://cdnjs.cloudflare.com/ajax/libs/patternfly/3.24.0/css/patternfly.min.css">
    <link rel="stylesheet" type="text/css"
          href="https://cdnjs.cloudflare.com/ajax/libs/patternfly/3.24.0/css/patternfly-additions.min.css">
</head>
<body>
<div class="container">

    <h2>Last price</h2>
    <div class="row">
    <p class="col-md-12"><button id="fetch">Fetch</button>The last price is <strong><span id="content">N/A</span>&nbsp;&euro;</strong>.</p>
    </div>
</div>
</body>
<script>
    document.getElementById("fetch").addEventListener("click", function() {
        fetch("/prices/last").then(function (response) {
            response.text().then(function (text) {
                document.getElementById("content").textContent = text;
            })
        })
    })
</script>
</html>
----

Nothing spectacular here. On each fetch, it updates the page.

=== Configure the Qpid JMS properties

We need to configure the Qpid JMS properties used by the extension when
injecting the ConnectionFactory.

This is done in the `src/main/resources/application.properties` file.

[source,properties]
----
# Configures the Qpid JMS properties.
quarkus.qpid-jms.url=amqp://localhost:5672
quarkus.qpid-jms.username=quarkus
quarkus.qpid-jms.password=quarkus
----

More detail about the configuration are available in the https://github.com/amqphub/quarkus-qpid-jms#configuration[Quarkus Qpid JMS] documentation.

[#get-it-running]
=== Get it running

If you followed the instructions, you should have the Artemis server running.
Then, you just need to run the application using:

include::{includes}/devtools/dev.adoc[]

Open `http://localhost:8080/prices.html` in your browser.

=== Running Native

You can build the native executable with:

include::{includes}/devtools/build-native.adoc[]

Or, if you don't have GraalVM installed, you can instead use Docker to build the native executable using:

include::{includes}/devtools/build-native-container.adoc[]

and then run with:

[source,bash]
----
./target/jms-quickstart-1.0.0-SNAPSHOT-runner
----

Open `http://localhost:8080/prices.html` in your browser.

'''


[#artemis-jms]
== Artemis JMS

The above steps detailed using the Qpid JMS AMQP client, however the guide can also be used
with the Artemis JMS client. Many of the individual steps are exactly as previously
xref:qpid-jms-amqp[detailed above for Qpid JMS]. The individual component code is the same.
The only differences are in the dependency for the initial project creation, and the
configuration properties used. These changes are detailed below and should be substituted
for the equivalent step during the sequence above.

=== Solution

You can go right to the completed example.

Clone the Git repository: `git clone {quickstarts-clone-url}`, or download an {quickstarts-archive-url}[archive].

The Artemis JMS solution is located in the `jms-quickstart` link:{quickstarts-tree-url}/jms-quickstart[directory].

=== Creating the Maven Project

Create a new project with the following command:

:create-app-artifact-id: jms-quickstart
:create-app-extensions: resteasy-reactive,artemis-jms
include::{includes}/devtools/create-app.adoc[]

This creates a new project importing the quarkus-artemis-jms extension:

[source,xml,role="primary asciidoc-tabs-target-sync-cli asciidoc-tabs-target-sync-maven"]
.pom.xml
----
<dependency>
    <groupId>io.quarkiverse.artemis</groupId>
    <artifactId>quarkus-artemis-jms</artifactId>
</dependency>
----

[source,gradle,role="secondary asciidoc-tabs-target-sync-gradle"]
.build.gradle
----
implementation("io.quarkiverse.artemis:quarkus-artemis-jms")
----

With the project created, you can resume from xref:starting-the-broker[Starting the broker] in the detailed steps above
and proceed until configuring the `application.properties` file, when you should use the Artemis
configuration below instead.

=== Configure the Artemis properties

We need to configure the Artemis connection properties.
This is done in the `src/main/resources/application.properties` file.

[source,properties]
----
# Configures the Artemis properties.
quarkus.artemis.url=tcp://localhost:61616
quarkus.artemis.username=quarkus
quarkus.artemis.password=quarkus
----

With the Artemis properties configured, you can resume the steps above from xref:get-it-running[Get it running].

=== Configuration Reference

To know more about how to configure the Artemis JMS client, have a look at https://quarkiverse.github.io/quarkiverse-docs/quarkus-artemis/dev/index.html[the documentation of the extension].

